--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,5 @@ env:
 before_install:
 - gem install xcpretty -N
 script:
-- xcodebuild test -project Spread.xcodeproj -scheme "Spread" -sdk iphonesimulator
-  -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO
-
+- xcodebuild -project Spread.xcodeproj -scheme "Spread" -sdk iphonesimulator
+  -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO test
